--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/robsniezek/surf-broadband-maps.git"
+    "url": "git+git@github.com:robsniezek/surf-broadband-maps.git"
   },
   "author": "",
   "license": "ISC",
